# mid-fusion

./: .gitignore  Dockerfile  LICENSE  README.md
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: main.yml
apps/kfusion/: CMakeLists.txt  Makefile
apps/kfusion/demo/: carrot.sh  cup_and_bottle.sh  multi_moving.sh  rotate_book.sh  syn_2objs.sh
apps/kfusion/include/: commons.h  config.h  constant_parameters.h  default_parameters.h  draw.h  kernels.h  marching_cubes.h  vtk-io.h
apps/kfusion/qt/: SlamBenchQt.cpp
apps/kfusion/scripts/: _dataset.py  _run.py  datasets.py  evaluate_ate.py  run_kf.py  systemsettings.py
apps/kfusion/src/: benchmark.cpp  mainQt.cpp  reader.cpp
apps/kfusion/src/cpp/: kfusion.cpp  mapping.hpp
apps/kfusion/src/cpp/bfusion/: alloc_impl.hpp  bspline_lookup.cc  mapping_impl.hpp  rendering_impl.hpp
apps/kfusion/src/cpp/continuous/: volume_instance.hpp  volume_template.hpp  volume_traits.hpp
apps/kfusion/src/cpp/kfusion/: alloc_impl.hpp  mapping_impl.hpp  rendering_impl.hpp
apps/kfusion/src/cpp/object/: object.cpp  object.h
apps/kfusion/src/cpp/preprocessing/: preprocessing.cpp  preprocessing.h
apps/kfusion/src/cpp/rendering/: rendering.cpp  rendering.h
apps/kfusion/src/cpp/segmentation/: segmentation.cpp  segmentation.h
apps/kfusion/src/cpp/tracking/: tracking.cpp  tracking.h
apps/kfusion/test/: CMakeLists.txt  callSegmentationUnitTest  callTrackingUnitTest
apps/kfusion/test/preprocessing/: CMakeLists.txt  interp_unittest.cpp
apps/kfusion/test/segmentation/: CMakeLists.txt  segmentation_unittest.cpp
apps/kfusion/test/segmentation/classid/: 0064.npy  0065.npy
apps/kfusion/test/segmentation/mask/: 0064.npy  0065.npy
apps/kfusion/test/tracking/: CMakeLists.txt  jacobians_unittest.cpp  tum pose
lib/: data.hpp  node.hpp  octant_ops.hpp  octree.hpp  octree_defines.h  voxel_traits.hpp
lib/algorithms/: filter.hpp  mapping.hpp  meshing.hpp  raycasting.cpp  unique.hpp
lib/functors/: axis_aligned_functor.hpp  data_handler.hpp  projective_functor.hpp
lib/geometry/: aabb_collision.hpp  octree_collision.hpp
lib/interpolation/: interp_gather.hpp
lib/test/: CMakeLists.txt  Makefile
lib/test/algorithms/: CMakeLists.txt  unique_unittest.cpp
lib/test/allocation/: alloc_unittest.cpp
lib/test/functor/: axisaligned_unittest.cpp
lib/test/geometry/: aabb_collision_unittest.cpp  octree_collision_unittest.cpp
lib/test/interp/: CMakeLists.txt  gather_unittest.cpp  interpolation_unittest.cpp
lib/test/multiscale/: multiscale_unittest.cpp
lib/test/octree/: CMakeLists.txt  octree_unittest.cpp
lib/test/utils/: morton_unittest.cpp
lib/utils/: memory_pool.hpp  morton_utils.hpp
utils/: cutil_math.h  download_data.py  math_utils.h  timings.h
